Updated home and blog pages.

--- a/docs/_includes/nav.html
+++ b/docs/_includes/nav.html
@@ -1,7 +1,7 @@
 <ul class="links">
-  <li class="{% if page.url == "/" %} active {% endif %}"><a href="{{ "/" | absolute_url }}">Theme Home</a></li>
-  <li class="{% if page.url contains '/about/' %} active {% endif %}"><a href="{{ "/about/" | absolute_url }}">About</a></li>
+  <li class="{% if page.url == "/" %} active {% endif %}"><a href="{{ "/" | absolute_url }}">Home</a></li>
   <li class="{% if page.url contains '/blog/' %} active {% endif %}"><a href="{{ "/blog/" | absolute_url }}">Blog</a></li>
+  <li class="{% if page.url contains '/about/' %} active {% endif %}"><a href="{{ "/about/" | absolute_url }}">About</a></li>
   <li class="{% if page.url contains '/elements/' %} active {% endif %}"><a href="{{ "/elements/" | absolute_url }}">Elements Reference</a></li>
 </ul>
 
@@ -9,4 +9,5 @@
   <li><a href="https://meetup.com/{{site.meetup}}" class="icon brands fa-meetup" rel="nofollow"><span class="label">Meetup</span></a></li>
   <li><a href="https://github.com/{{site.github}}" class="icon brands fa-github" rel="nofollow"><span class="label">GitHub</span></a></li>
   <li><a href="https://twitter.com/{{site.twitter}}" class="icon brands fa-twitter" rel="nofollow"><span class="label">Twitter</span></a></li>
+  <li><a href="mailto:{{site.email}}" class="icon fa-envelope" rel="nofollow"><span class="label">E-mail</span></a></li>
 </ul>
