--- a/docs/_layouts/blog.html
+++ b/docs/_layouts/blog.html
@@ -33,21 +33,15 @@
 
           <article class="post featured">
             <header class="major">
-              <h2><a href="#">Importance of Blogs</a></h2>
-              <p>Blogs are really pretty awesome things. For one, they are a means to continually provide fresh,
-                dynamic content to your users. Also, they help your site get indexed and build authority as they are essential for SEO!
-							</p>
+              <h2><a href="#">DevOps for Defense Blog</a></h2>
+              <p>Our blog provides you all the latest announcements and content from our meetup.</p>
             </header>
 						<p>
-							Content fulfills the general population seeing your website and it likewise fulfills web indexes! Having solid content
-							influences your advertising to work a hell of a great deal simpler. Along these lines, the greatest bit of the promoting riddle is there. It's vital to thoroughly consider this technique before starting another crusade. This makes the whole content and advertising process more streamlined and will in the end enable your message to achieve your clients in a more effective manner. You ought not think little of the significance of giving yourself room. Having squirm room takes into consideration steady changes to your methodology en route.
+							Generally you will find two kinds of posts here.  First is announcements.  Sometimes we have to make adjustments to the meetup 
+							(i.e. scheduling changes) or want to get the word out about relevant events in the community (i.e. conferences).  When these
+							pop up, we'll post a short blog entry here so check back in regularly.  Second is content posts.  After we collect and post material
+							from the meetup, we'll include a post with a short summary and a link to the published material.  
 						<p>
-						</p>
-							At that point, rather than pushing something superfluous to your users, you can give them something that will stick.
-							You'll give them something they can identify with and be slanted to share with their companions and associates. Perhaps they'll even be slanted to work with you later on!
-							Having an advancement technique that is excessively unbending isn't astute on the grounds that there is no space for solid spontaneous creation. Having the capacity to change your advertising procedure will prompt more deals and arrangements.
-						</p>
-
           </article>
 					<!-- Post -->
 					<section class="posts">
@@ -67,7 +61,7 @@
 							{% if mod3 == 0 %}
 							<article>
 								<header>
-									<h2><a href="#">Sponsored</a></h2>
+									<h2></h2>
 								</header>
 
 							</article>
