Added resources, autogen from posts

--- a/docs/_includes/foot.html
+++ b/docs/_includes/foot.html
@@ -29,7 +29,7 @@
     </section>
     <section>
         <h3>Sponsor</h3>
-        <p><a href="https://www.teksystems.com/en"><img src="images/teksystemslogo.png"></a></p>
+        <p><a href="https://www.teksystems.com/en"><img src="/images/teksystemslogo.png"></a></p>
       </section>
   </section>
 </footer>
