--- a/docs/_includes/nav.html
+++ b/docs/_includes/nav.html
@@ -3,6 +3,7 @@
   <li class="{% if page.url contains '/blog/' %} active {% endif %}"><a href="{{ "/blog/" | absolute_url }}">Blog</a></li>
   <li class="{% if page.url contains '/agile_deep_dive/' %} active {% endif %}"><a href="{{ "/agile_deep_dive/" | absolute_url }}">Agile Deep Dive</a></li>
   <li class="{% if page.url contains '/sw_factory/' %} active {% endif %}"><a href="{{ "/sw_factory/" | absolute_url }}">Software Factory</a></li>
+  <li class="{% if page.url contains '/resources/' %} active {% endif %}"><a href="{{ "/resources/" | absolute_url }}">Resources</a></li>
 </ul>
 
 <ul class="icons">
