--- a/docs/_layouts/blog.html
+++ b/docs/_layouts/blog.html
@@ -46,7 +46,7 @@
 					<!-- Post -->
 					<section class="posts">
 						{% for post in site.posts %}
-						{% assign mod4 = forloop.index | modulo: 4 %}
+							{% if post.category != "resource" %}
 							<article>
 								<header>
 									<span class="date">{{ post.date | date_to_string }}</span>
@@ -58,15 +58,6 @@
 									<li><a href="{{ post.url | absolute_url }}" class="button">Full Story</a></li>
 								</ul>
 							</article>
-							{% if mod4 == 0 %}
-							<!--
-							<article>
-								<header>
-									<h2></h2>
-								</header>
-
-							</article>
-							-->
 							{% endif %}
 						{% endfor %}
 
