--- a/docs/_includes/foot.html
+++ b/docs/_includes/foot.html
@@ -35,5 +35,5 @@
 </footer>
 <!-- Copyright -->
 <div id="copyright">
-  <ul><li>&copy; Jondavid Black</li><li>DevOps for Defense Customication</li><li>&nbsp;</li><li>&copy; HTML5 UP</li><li>Design by <a href="https://html5up.net" rel="nofollow">HTML5 UP</a></li><li>Jekyll Integration by <a href="https://slapform.com">Slapform</a> </li></ul>
+  <ul><li>&copy; Jondavid Black</li><li>DevOps for Defense Customization</li><li>&nbsp;</li><li>&copy; HTML5 UP</li><li>Design by <a href="https://html5up.net" rel="nofollow">HTML5 UP</a></li><li>Jekyll Integration by <a href="https://slapform.com">Slapform</a> </li></ul>
 </div>
