added link to RSS on website

--- a/docs/_includes/nav.html
+++ b/docs/_includes/nav.html
@@ -9,6 +9,8 @@
 <ul class="icons">
   <li><a href="https://meetup.com/{{site.meetup}}" class="icon brands fa-meetup" rel="nofollow"><span class="label">Meetup</span></a></li>
   <li><a href="https://github.com/{{site.github}}" class="icon brands fa-github" rel="nofollow"><span class="label">GitHub</span></a></li>
+  <li><a href="https://facebook.com/{{site.facebook}}" class="icon brands fa-facebook" rel="nofollow"><span class="label">Facebook</span></a></li>
   <li><a href="https://twitter.com/{{site.twitter}}" class="icon brands fa-twitter" rel="nofollow"><span class="label">Twitter</span></a></li>
+  <li><a href="https://devopsfordefense.org/feed.xml" class="icon fa-rss" rel="nofollow"><span class="label">RSS</span></a></li>
   <li><a href="mailto:{{site.email}}" class="icon fa-envelope" rel="nofollow"><span class="label">E-mail</span></a></li>
 </ul>
