--- a/docs/_includes/foot.html
+++ b/docs/_includes/foot.html
@@ -22,6 +22,7 @@
       <h3>Social</h3>
       <ul class="icons alt">
         <li><a href="https://meetup.com/{{site.meetup}}" class="icon brands fa-meetup" rel="nofollow"><span class="label">Meetup</span></a></li>
+        <li><a href="https://youtube.com/{{site.youtube}}" class="icon brands fa-youtube" rel="nofollow"><span class="label">YouTube</span></a></li>
         <li><a href="https://github.com/{{site.github}}" class="icon brands fa-github" rel="nofollow"><span class="label">GitHub</span></a></li>
         <li><a href="https://facebook.com/{{site.facebook}}" class="icon brands fa-facebook" rel="nofollow"><span class="label">Facebook</span></a></li>
         <li><a href="https://twitter.com/{{site.twitter}}" class="icon brands fa-twitter" rel="nofollow"><span class="label">Twitter</span></a></li>
